tests/snapshots/serde__display_uint16array_many_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint16Array([0, 1, 2, 3, 4, 5, 6, 7, 8])"
---
new Uint16Array([
  0x00, 0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07,
  0x08,
])
