tests/snapshots/serde__display_uint16array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint16Array([1])"
---
new Uint16Array([
  0x01,
])
