tests/snapshots/serde__display_uint16array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint16Array([1, 2]).subarray(1, 2)"
---
new Uint16Array([
  0x01, 0x02,
]).subarray(1, 2)
