tests/snapshots/serde__display_uint16array_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint16Array(4)"
---
new Uint16Array(4)
