tests/snapshots/serde__display_uint16array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint16Array([0, 0, 0])"
---
new Uint16Array(3)
