tests/snapshots/serde__display_uint32array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint32Array([1])"
---
new Uint32Array([
  0x01,
])
