tests/snapshots/serde__display_uint32array_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint32Array(new ArrayBuffer(4, { maxByteLength: 12 }))"
---
const v0 = new ArrayBuffer(4, { maxByteLength: 12 });
new Uint32Array(v0)
